--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"archiver": "^6.0.1",
 		"innosetup": "^6.0.5",
 		"marked": "^9.1.2",
+		"marked-gfm-heading-id": "^3.1.0",
 		"tar": "^6.2.0",
 		"yauzl": "^2.10.0"
 	}
